[package]
name = "tetrivercal"
version = "0.1.0"
authors = ["Nathan Hare <me@laspruca.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.53.0"
piston2d-graphics = "0.40.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.78.0"
tokio-tungstenite = "*"
url = "*"
tokio = { version = "1.5.0", features = ["full"] }
futures = "*"
serde = {version = "*", features = ["derive"]}
serde_json = "*"
native-dialog = "*"
log = "0.4"
async-log = "*"
env_logger = "*"
colored = "*"
chrono = "*"
futures-util = "*"
